# logos-messaging-a2a

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/lmao-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/lmao-ffi/include/: lmao_ffi.h
crates/lmao-ffi/src/: lib.rs
crates/waku-a2a-cli/: Cargo.toml
crates/waku-a2a-cli/src/: main.rs
crates/waku-a2a-core/: Cargo.toml
crates/waku-a2a-core/src/: lib.rs
crates/waku-a2a-crypto/: Cargo.toml
crates/waku-a2a-crypto/src/: lib.rs
crates/waku-a2a-ffi/: Cargo.toml
crates/waku-a2a-ffi/src/: lib.rs
crates/waku-a2a-node/: Cargo.toml
crates/waku-a2a-node/src/: lib.rs
crates/waku-a2a-node/tests/: ping_pong.rs
crates/waku-a2a-transport/: Cargo.toml
crates/waku-a2a-transport/src/: lib.rs  memory.rs  nwaku_rest.rs  sds.rs
docs/: architecture.md  issues.md
examples/: echo_agent.rs  ping_pong.rs
include/: waku_a2a.h
module/: CMakeLists.txt  README.md  metadata.json
module/qml/: MessagingA2AView.qml  qml.qrc
module/src/: MessagingA2ABackend.cpp  MessagingA2ABackend.h  MessagingA2AUIComponent.cpp  MessagingA2AUIComponent.h
src/: lib.rs
