[package]
name = "waku-a2a-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "waku-a2a"
path = "src/main.rs"

[dependencies]
waku-a2a-crypto = { path = "../waku-a2a-crypto" }
waku-a2a-core = { path = "../waku-a2a-core" }
waku-a2a-transport = { path = "../waku-a2a-transport" }
waku-a2a-node = { path = "../waku-a2a-node" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
k256 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
