[package]
name = "waku-a2a-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
