[package]
name = "waku-a2a-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI bridge for waku-a2a — enables Logos Core Qt module integration"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "waku_a2a_ffi"

[dependencies]
waku-a2a-core = { path = "../waku-a2a-core" }
waku-a2a-transport = { path = "../waku-a2a-transport" }
waku-a2a-node = { path = "../waku-a2a-node" }
waku-a2a-crypto = { path = "../waku-a2a-crypto" }
tokio = { workspace = true }
serde_json = { workspace = true }
once_cell = "1"
