[package]
name = "waku-a2a-node"
version = "0.1.0"
edition = "2021"

[dependencies]
waku-a2a-crypto = { path = "../waku-a2a-crypto" }
waku-a2a-core = { path = "../waku-a2a-core" }
waku-a2a-transport = { path = "../waku-a2a-transport" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
k256 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
