[package]
name = "waku-a2a-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

# TODO (Issue #1): Replace nwaku REST fallback with logos-delivery-rust-bindings FFI
# waku-bindings = { git = "https://github.com/logos-messaging/logos-delivery-rust-bindings", version = "1.0.0" }
